--- a/agit/res/layout/osv_commit_summary_view.xml
+++ b/agit/res/layout/osv_commit_summary_view.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 	<com.madgag.agit.PersonIdentView
-         android:id="@+id/csv_commit_author_ident"
+         android:id="@+id/author_ident"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
-
-	<TextView android:id="@+id/commit_message_text"
+	<TextView android:id="@+id/short_message_text"
 		android:layout_width="fill_parent"
 		android:layout_height="0px"
 		android:layout_weight="1"
 		android:typeface="monospace"
 		android:textAppearance="?android:attr/textAppearanceSmall" />
-</LinearLayout>
+</merge>
