--- a/agit/res/layout/osv_commit_summary_view.xml
+++ b/agit/res/layout/osv_commit_summary_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
-	<com.madgag.agit.PersonIdentView
+	<com.madgag.agit.views.PersonIdentView
          android:id="@+id/author_ident"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
@@ -8,6 +8,5 @@
 		android:layout_width="fill_parent"
 		android:layout_height="0px"
 		android:layout_weight="1"
-		android:typeface="monospace"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
+		style="@style/GitMessage" />
 </merge>
